# SPDX-FileCopyrightText: (C) 2024 90degs2infty
# SPDX-FileContributor: 90degs2infty <90degs2infty@posteo.org>
#
# SPDX-License-Identifier: Apache-2.0
# SPDX-License-Identifier: MIT

[workspace]
resolver = "2"
members = [
    "denys-lib",
]

[workspace.dependencies]
denys-lib = { path = "./denys-lib" }

[workspace.lints.rust]
missing_docs = { level = "warn", priority = 0 }

[workspace.lints.rustdoc]
missing_crate_level_docs = { level = "warn", priority = 1 }
unescaped_backticks = { level = "warn", priority = 1 }

[workspace.lints.clippy]
cargo = { level = "warn", priority = 2 }
all = { level = "warn", priority = 3 }
pedantic = { level = "warn", priority = 4 }
module_name_repetitions = { level = "allow", priority = 10 }
multiple_crate_versions = { level = "allow", priority = 10 }
